# recall

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/recall/: __init__.py
src/recall/api/: __init__.py  main.py
src/recall/core/: __init__.py  config.py  context_store.py  db.py  llm.py  models.py  runtime_llm_config.py  schemas.py  service.py  worker_status.py
src/recall/web/: __init__.py  main.py
src/recall/web/static/: app.js  styles.css
src/recall/web/templates/: base.html  context.html  detail.html  edit.html  index.html  new.html  search.html  tags.html  worker_health.html
src/recall/worker/: __init__.py  main.py
tests/: test_service.py
